--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -1,10 +1,15 @@
 //Main colors
 $mainColor: rgb(66, 47, 213);
-$secondaryColor: rgb(0, 245, 131);
+$secondaryColor: rgb(101, 214, 227);
+
 
 //Secondary colors
 $mainColor2: #5c1a96;
 $secondaryColor2: #bc6aff;
+
+//Terciary colors
+$mainColor3: red;
+$secondaryColor3: red;
 
 //Font-Family
 $fontMainTitle: "Montserrat";
