--- a/src/home/_home.scss
+++ b/src/home/_home.scss
@@ -4,7 +4,7 @@
 }
 
 ._home {
-  height: 100vh;
+
   color: $secondaryColor2;
   font-size: $fontMainSize;
   font-family: $fontMainTitle;
@@ -13,7 +13,7 @@
     color: $mainColor;
     font-weight: 400;
     margin-left: 5vw;
-    margin-top: 10vh;
+    margin-top: 13vh;
     font-size: 7vw;
     font-family: $fontMainTitle;
 
@@ -50,19 +50,42 @@
           color: $secondaryColor;
           font-size: 3vw;
           font-weight: 400;
-          margin-top: 5vh;
+          margin-top: 16vh;
           margin-right: 5vw;
 
+
+ background-image: linear-gradient(
+   225deg,
+   $mainColor 0%,
+   $secondaryColor 29%,
+   $mainColor2 67%,
+   $secondaryColor2 80%,
+   #fff800 100%
+ );
+ background-size: auto auto;
+ background-clip: border-box;
+ background-size: 200% auto;
+ color: #fff;
+ background-clip: text;
+ -webkit-background-clip: text;
+ -webkit-text-fill-color: transparent;
+ animation: textclip 5s linear infinite;
+ display: inline-block;
+
+@keyframes textclip {
+  to {
+    background-position: 200% center;
+  }
+}
           &__span {
             font-weight: 600;
-            text-shadow: 2px 2px 2px red;
           }
         }
       }
     }
   }
   &__scroll {
-    margin-top: 15vh;
+    margin-top: 10vh;
     background-color: $secondaryColor;
     height: 10vh;
     display: flex;
@@ -77,16 +100,17 @@
     &__down {
       color: $secondaryColor;
       font-size: $fontMainSize;
+      background-color: $mainColor;
       font-weight: 500;
       margin-top: 2vh;
       font-family: $fontMainTitle;
       animation: pulse-title 5s infinite;
       cursor: pointer;
-      background-color: rgb(23, 17, 111);
       padding: 1vh 2vw 1vh 2vw;
       border: solid $mainColor;
-      border-radius: 40px;
+      border-radius: 50px;
       transition: 1s ease-in-out;
+      
 
       &:hover {
         letter-spacing: 0.2vw;
@@ -110,4 +134,10 @@
       }
     }
   }
+
+&__component {
+  display: flex;
+  flex-direction: column;
 }
+}
+
