--- a/src/sass/_index.scss
+++ b/src/sass/_index.scss
@@ -1,11 +1,7 @@
 .app {
-  height: 240vh;
+  height: 390vh;
   width: 100vw;
   display: flex;
-  background: linear-gradient(
-    180deg,
-    rgba(0, 0, 0, 1) 0%,
-    rgba(9, 9, 121, 1) 47%,
-    rgba(89, 19, 140, 1) 100%
-  );
+  flex-direction: column;
+  background: $mainColor3;
 }
