packages added and font animations improve

--- a/src/App.scss
+++ b/src/App.scss
@@ -8,6 +8,7 @@
 @import "./languageCardList/_languageCard";
 @import "./languageCardList/_languageCardList";
 @import "./skillsCardList/skillCard";
-@import "./skillsCardList/SkillsCardList";
+@import "./skillsCardList/skillsCardList";
 @import "./education/education";
 @import "./projects/projects";
+@import "./carousel/carousel"
