--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -8,8 +8,8 @@ $mainColor2: #5c1a96;
 $secondaryColor2: #bc6aff;
 
 //Terciary colors
-$mainColor3: red;
-$secondaryColor3: red;
+$mainColor3: rgb(255, 255, 255);
+$secondaryColor3: rgb(0, 0, 0);
 
 //Font-Family
 $fontMainTitle: "Montserrat";
