--- a/src/languageCardList/_languageCardList.scss
+++ b/src/languageCardList/_languageCardList.scss
@@ -1,8 +1,24 @@
 ._languageCardList {
   display: flex;
+  flex-direction: column;
+  justify-content:center ;
+  align-items: center;
+  width: 50vw;
+
+  &__title{
+    font-family: $fontMainTitle;
+    font-weight: 100;
+  }
+
+&__list {
+  height: 40vh;
+  width: 30;
+  display: flex;
   flex-direction: row;
   flex-wrap: wrap;
   justify-content: space-around;
   align-items: center;
-  width: 100vw;
 }
+
+}
+
