--- a/src/skills/_skills.scss
+++ b/src/skills/_skills.scss
@@ -49,6 +49,14 @@
           }
         }
       }
+ 
+
+    }
+    &__lists {
+      margin-top: 10vh;
+   display: flex;
+   flex-direction: row;
+   justify-content: space-around;
     }
   }
 }
