--- a/src/skillsCardList/_skillsCardList.scss
+++ b/src/skillsCardList/_skillsCardList.scss
@@ -1,8 +1,22 @@
 ._skillsCardList {
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-  justify-content: space-around;
-  align-items: center;
-  width: 100vw;
+ display: flex;
+ flex-direction: column;
+ justify-content:center ;
+ align-items: center;
+ width: 50vw;
+
+ &__title {
+font-family: $fontMainTitle;
+font-weight: 100;
+ }
+
+  &__list {
+    height: 40vh;
+    background-color: aqua;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    align-items: center;
+  }
 }
