--- a/src/navbar/_navBar.scss
+++ b/src/navbar/_navBar.scss
@@ -34,6 +34,14 @@ z-index: 50;
     &__span{
       color: red;
     }
+
+&__container {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+}
+
   }
 
   &__container {
