--- a/src/App.scss
+++ b/src/App.scss
@@ -11,4 +11,4 @@
 @import "./skillsCardList/skillsCardList";
 @import "./education/education";
 @import "./projects/projects";
-@import "./carousel/carousel"
+@import "./carousel/carousel";
