--- a/src/carousel/_carousel.scss
+++ b/src/carousel/_carousel.scss
@@ -1,28 +1,28 @@
 .projects {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  text-align: center;
+  width: 40vw;
+  height: 100%;
+  background: none;
+  color: rgb(53, 101, 142);
+  a {
+    text-decoration: none;
+    color: rgb(15, 95, 165);
+  }
+  .project {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    text-align: center;
-    width: 40vw;
-    height: 100%;
-    background: none;
-    color: aliceblue;
-    a {
-      text-decoration: none;
-      color: aliceblue;
-    }
-    .project {
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
-      &__img {
-        width: 50%;
-        height: 100%;
-        img {
-          width: 80%;
-          object-fit: cover;
-        }
+    align-items: center;
+    &__img {
+      width: 50%;
+      height: 100%;
+      img {
+        width: 80%;
+        object-fit: cover;
       }
     }
   }
+}
