--- a/src/education/_education.scss
+++ b/src/education/_education.scss
@@ -1,6 +1,269 @@
 ._education {
-  background-color: aqua;
+  background-image: linear-gradient(to top, black  0%, #2b0a31 100%);
   height: 100vh;
   font-size: 5vw;
   margin-top: 0;
+
+    &__container {
+      
+      background: none;
+      display: flex;
+      flex-direction: row-reverse;
+      align-items: center;
+      justify-content: space-around;
+  
+  
+      &__title {
+        margin-top: 15vh;
+        color: rgb(255, 0, 179);
+        font-weight: 400;
+        margin-left: 5vw;
+        font-size: 7vw;
+        font-family: $fontMainTitle;
+        text-shadow:2px 2px 2px rgb(183, 0, 255);
+        height: 20vh;
+  
+        &__span {
+          font-weight: 100;
+          opacity: 30%;
+        }
+  
+        &__container {
+          display: flex;
+          justify-content: flex-end;
+          align-items: center;
+          flex-direction: row;
+  
+          &__desc {
+            margin-top: 15vh;
+            color: $mainColor;
+            width: 40vw;
+            height: auto;
+            font-size: $fontTextSize;
+            font-family: $fontMainTitle;
+            font-style: italic;
+            font-weight: 300;
+            text-shadow: 1px 1px 1px rgb(110, 255, 110);
+            transition: 1s ease-in-out;
+            text-align: center;
+  
+            &:hover {
+              color: rgb(255, 13, 0);
+              text-shadow: 1px 1px 1px rgb(177, 0, 171);
+            }
+          }
+        }
+      }
+
+
+
+    }
+    &__list__container {
+      display: flex;
+      flex-direction: row;
+      width: 100vw;
+      justify-content: space-around;
+
+&__experiences {
+  width: 40vw;
+  text-align: center;
+
+  &__ul{
+    list-style: none;
+
+    &__li {
+      font-size: 1vw;
+    }
+  }
+}
+
+&__dates{
+  width: 5vw;
+
+
+&__p{
+  font-size: 1vw;
+}
+
+}
+
+&__school {
+  width: 40vw;
+  text-align: center;
+
+  &__ul{
+    list-style: none;
+
+    &__li {
+      font-size: 1vw;
+    }
+  }
+}
+
+    }
+
+  &__scroll {
+    height: 10vh;
+    margin-bottom: 10vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+
+
+    &__down {
+      color: $mainColor2;
+      font-size: $fontMainSize;
+      background: none;
+      font-weight: 300;
+      // margin-top: 110vh;
+      font-family: $fontMainTitle;
+      cursor: pointer;
+      padding: 1vh 2vw 1vh 2vw;
+      border: solid 2px $mainColor2;
+      border-radius: 50px;
+      transition: 1s ease-in-out;
+
+      &:hover {
+        transition: 1s ease-in-out;
+        background-color: $mainColor;
+      }
+    }
+  }
+}
+
+
+html, body {
+  margin: 0;
+  padding: 0;
+  font-family: Helvetica, sans-serif;
+}
+body {
+  background: #25303B;
+}
+section#timeline {
+  width: 80%;
+  margin: 20px auto;
+  position: relative;
+}
+section#timeline:before {
+  content: '';
+  display: block;
+  position: absolute;
+  left: 50%;
+  top: 0;
+  margin: 0 0 0 -1px;
+  width: 2px;
+  height: 100%;
+  background: rgba(255,255,255,0.2);
+}
+section#timeline article {
+  width: 100%;
+  margin: 0 0 20px 0;
+  position: relative;
+}
+section#timeline article:after {
+  content: '';
+  display: block;
+  clear: both;
+}
+section#timeline article div.inner {
+  width: 40%;
+  float: left;
+  margin: 5px 0 0 0;
+  border-radius: 6px;
+}
+section#timeline article div.inner span.date {
+  display: block;
+  width: 60px;
+  height: 50px;
+  padding: 5px 0;
+  position: absolute;
+  top: 0;
+  left: 50%;
+  margin: 0 0 0 -32px;
+  border-radius: 100%;
+  font-size: 12px;
+  font-weight: 900;
+  text-transform: uppercase;
+  background: #25303B;
+  color: rgba(255,255,255,0.5);
+  border: 2px solid rgba(255,255,255,0.2);
+  box-shadow: 0 0 0 7px #25303B;
+}
+section#timeline article div.inner span.date span {
+  display: block;
+  text-align: center;
+}
+section#timeline article div.inner span.date span.day {
+  font-size: 10px;
+}
+section#timeline article div.inner span.date span.month {
+  font-size: 18px;
+}
+section#timeline article div.inner span.date span.year {
+  font-size: 10px;
+}
+section#timeline article div.inner h2 {
+  padding: 15px;
+  margin: 0;
+  color: #fff;
+  font-size: 20px;
+  text-transform: uppercase;
+  letter-spacing: -1px;
+  border-radius: 6px 6px 0 0;
+  position: relative;
+}
+section#timeline article div.inner h2:after {
+  content: '';
+  position: absolute;
+  top: 20px;
+  right: -5px;
+  	width: 10px; 
+	  height: 10px;
+  -webkit-transform: rotate(-45deg);
+}
+section#timeline article div.inner p {
+  padding: 15px;
+  margin: 0;
+  font-size: 14px;
+  background: #fff;
+  color: #656565;
+  border-radius: 0 0 6px 6px;
+}
+section#timeline article:nth-child(2n+2) div.inner {
+  float: right;
+}
+section#timeline article:nth-child(2n+2) div.inner h2:after {
+  left: -5px;
+}
+section#timeline article:nth-child(1) div.inner h2 {
+  background: #e74c3c;
+}
+section#timeline article:nth-child(1) div.inner h2:after {
+  background: #e74c3c;
+}
+section#timeline article:nth-child(2) div.inner h2 {
+  background: #2ecc71;
+}
+section#timeline article:nth-child(2) div.inner h2:after {
+  background: #2ecc71;
+}
+section#timeline article:nth-child(3) div.inner h2 {
+  background: #e67e22;
+}
+section#timeline article:nth-child(3) div.inner h2:after {
+  background: #e67e22;
+}
+section#timeline article:nth-child(4) div.inner h2 {
+  background: #1abc9c;
+}
+section#timeline article:nth-child(4) div.inner h2:after {
+  background: #1abc9c;
+}
+section#timeline article:nth-child(5) div.inner h2 {
+  background: #9b59b6;
+}
+section#timeline article:nth-child(5) div.inner h2:after {
+  background: #9b59b6;
 }
