--- a/src/home/_home.scss
+++ b/src/home/_home.scss
@@ -1,5 +1,4 @@
-@import 'animate.css';
-
+@import "animate.css";
 
 * {
   margin: 0;
@@ -7,10 +6,16 @@
 }
 
 ._home {
-
+  height: 120vh;
   color: $secondaryColor2;
   font-size: $fontMainSize;
   font-family: $fontMainTitle;
+  background-image: url("../../public/assets/backGround.png");
+  background-size:     cover;                
+  background-repeat:   no-repeat;
+  background-position: center center; 
+
+
 
   &__title {
     margin-left: 4vw;
@@ -19,8 +24,8 @@
 
     &__span {
       font-weight: 100;
-      opacity: 30%;
-      color: $mainColor;
+      opacity: 50%;
+      color: $mainColor4;
       margin-left: 0.3vw;
       margin-top: 13vh;
       font-size: 7vw;
@@ -28,7 +33,7 @@
       z-index: 20;
     }
 
-    &__bounce{
+    &__bounce {
       color: $mainColor;
       font-weight: 600;
       margin-left: 0.3vw;
@@ -44,9 +49,7 @@
         animation-duration: 1s;
         transition: 0.3s;
         color: $secondaryColor;
-
       }
-
     }
 
     &__container {
@@ -57,11 +60,11 @@
       &__desc {
         margin-top: 10vh;
         color: $secondaryColor;
-        width: 50vw;
+        width: 30vw;
         height: auto;
         font-size: $fontTextSize;
         font-family: $fontMainTitle;
-        margin-right: 5vw;
+        margin-right: 3vw;
         font-style: italic;
         font-weight: 100;
         text-shadow: 1px 1px 1px rgb(110, 255, 110);
@@ -72,13 +75,11 @@
           text-shadow: 1px 1px 1px rgb(177, 0, 171);
         }
 
-
         &__span {
           font-weight: 100;
-          opacity: 30%;
-          color: $mainColor;
+          opacity: 50%;
+          color: $secondaryColor2;
           margin-left: 0.3vw;
-          margin-top: 13vh;
           font-size: 2vw;
           font-family: $fontMainTitle;
           cursor: pointer;
@@ -90,33 +91,32 @@
           color: $secondaryColor;
           font-size: 3vw;
           font-weight: 400;
-          margin-top: 16vh;
-          margin-right: 5vw;
+          margin-top: 12vh;
+          margin-right: 6vw;
 
+          background-image: linear-gradient(
+            225deg,
+            $mainColor 0%,
+            $secondaryColor 29%,
+            $mainColor2 67%,
+            $secondaryColor2 80%,
+            #fff800 100%
+          );
+          background-size: auto auto;
+          background-clip: border-box;
+          background-size: 200% auto;
+          color: #fff;
+          background-clip: text;
+          -webkit-background-clip: text;
+          -webkit-text-fill-color: transparent;
+          animation: textclip 5s linear infinite;
+          display: inline-block;
 
- background-image: linear-gradient(
-   225deg,
-   $mainColor 0%,
-   $secondaryColor 29%,
-   $mainColor2 67%,
-   $secondaryColor2 80%,
-   #fff800 100%
- );
- background-size: auto auto;
- background-clip: border-box;
- background-size: 200% auto;
- color: #fff;
- background-clip: text;
- -webkit-background-clip: text;
- -webkit-text-fill-color: transparent;
- animation: textclip 5s linear infinite;
- display: inline-block;
-
-@keyframes textclip {
-  to {
-    background-position: 200% center;
-  }
-}
+          @keyframes textclip {
+            to {
+              background-position: 200% center;
+            }
+          }
           &__span {
             font-weight: 600;
           }
@@ -125,39 +125,40 @@
     }
   }
   &__scroll {
-    margin-top: 10vh;
-    height: 10vh;
-    margin-bottom: 10vh;
+
+    margin-top: 8vh;
     display: flex;
     flex-direction: row;
     align-items: center;
     justify-content: space-around;
 
-
     &__down {
-      color: $mainColor2;
+      margin-bottom: 6vh;
+      color: $mainColor3;
       font-size: $fontMainSize;
-      background: none;
-      font-weight: 300;
-      margin-top: 2vh;
+      font-weight: 100;
       font-family: $fontMainTitle;
+      background: none;
+      opacity: 0.7;
       cursor: pointer;
-      padding: 1vh 2vw 1vh 2vw;
-      border: solid 2px $mainColor2;
-      border-radius: 50px;
+      padding: 1vh 1vw 1vh 1vw;
+      border: solid 0.1vw $mainColor3;
+      border-radius: 2vw;
       transition: 1s ease-in-out;
-      
+      backdrop-filter: blur(5.2px);
+-webkit-backdrop-filter: blur(5.2px);
 
       &:hover {
         transition: 1s ease-in-out;
-        background-color: $mainColor;
+        background-color: $secondaryColor;
+        color: $secondaryColor3;
+        border: solid 0.2vw $secondaryColor3;
       }
     }
   }
 
-&__component {
-  display: flex;
-  flex-direction: column;
+  &__component {
+    display: flex;
+    flex-direction: column;
+  }
 }
-}
-
