--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -1,15 +1,18 @@
 //Main colors
-$mainColor: rgb(66, 47, 213);
-$secondaryColor: rgb(101, 214, 227);
-
+$mainColor: rgb(103, 84, 244);
+$secondaryColor: rgb(227, 187, 101);
 
 //Secondary colors
-$mainColor2: #5c1a96;
+$mainColor2: #7f3fb6;
 $secondaryColor2: #bc6aff;
 
 //Terciary colors
 $mainColor3: rgb(255, 255, 255);
 $secondaryColor3: rgb(0, 0, 0);
+
+//Forth colors set
+$mainColor4: rgb(255, 238, 0);
+$secondaryColor4: rgb(0, 0, 0);
 
 //Font-Family
 $fontMainTitle: "Montserrat";
