--- a/src/skills/_skills.scss
+++ b/src/skills/_skills.scss
@@ -1,24 +1,27 @@
 ._skills {
-  height: 100vh;
+  margin-top: 10vh;
   width: 100vw;
   color: $secondaryColor2;
   font-size: $fontMainSize;
   font-family: $fontMainTitle;
+  background-image: linear-gradient(to top, #2b0a31 0%, black 100%);
 
   &__container {
-    background-color: $secondaryColor;
+    background: none;
     display: flex;
     flex-direction: row;
     align-items: center;
     justify-content: space-around;
 
+
     &__title {
       margin-top: 10vh;
-      color: $mainColor;
+      color: rgb(255, 0, 179);
       font-weight: 400;
       margin-left: 5vw;
       font-size: 7vw;
       font-family: $fontMainTitle;
+      text-shadow:2px 2px 2px rgb(183, 0, 255);
       height: 20vh;
 
       &__span {
@@ -33,8 +36,9 @@
         flex-direction: row;
 
         &__desc {
+          margin-top: 10vh;
           color: $mainColor;
-          width: 50vw;
+          width: 40vw;
           height: auto;
           font-size: $fontTextSize;
           font-family: $fontMainTitle;
@@ -42,6 +46,7 @@
           font-weight: 300;
           text-shadow: 1px 1px 1px rgb(110, 255, 110);
           transition: 1s ease-in-out;
+          text-align: center;
 
           &:hover {
             color: rgb(255, 13, 0);
@@ -49,14 +54,45 @@
           }
         }
       }
- 
-
     }
     &__lists {
       margin-top: 10vh;
-   display: flex;
-   flex-direction: row;
-   justify-content: space-around;
+      display: flex;
+      flex-direction: row;
+      justify-content: space-between;
+      align-items: center;
     }
   }
+
+  &__scroll {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-around;
+
+    &__down {
+      margin-bottom: 6vh;
+      color: $mainColor3;
+      font-size: $fontMainSize;
+      font-weight: 100;
+      font-family: $fontMainTitle;
+      background: none;
+      opacity: 0.7;
+      cursor: pointer;
+      padding: 1vh 1vw 1vh 1vw;
+      border: solid 0.1vw $mainColor3;
+      border-radius: 2vw;
+      transition: 1s ease-in-out;
+      backdrop-filter: blur(5.2px);
+-webkit-backdrop-filter: blur(5.2px);
+
+      &:hover {
+        transition: 1s ease-in-out;
+        background-color: $secondaryColor;
+        color: $secondaryColor3;
+        border: solid 0.2vw $secondaryColor3;
+      }
+    }
+  }
+
 }
