--- a/src/skillsCardList/_skillsCardList.scss
+++ b/src/skillsCardList/_skillsCardList.scss
@@ -1,22 +1,42 @@
 ._skillsCardList {
- display: flex;
- flex-direction: column;
- justify-content:center ;
- align-items: center;
- width: 50vw;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 50vw;
 
- &__title {
-font-family: $fontMainTitle;
-font-weight: 100;
- }
+  &__title {
+    font-family: $fontMainTitle;
+    font-weight: 100;
+    top: 0;
+  }
 
   &__list {
     height: 40vh;
-    background-color: aqua;
+    width: 40vw;
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     flex-wrap: wrap;
     justify-content: space-around;
     align-items: center;
+    text-align: center;
+
+&__desc{
+  text-align: left;
+  color: $mainColor3;
+  font-size: 1.5vw;
+  font-family: $fontMainTitle;
+  font-style: italic;
+  font-weight: 300;
+  text-shadow: 1px 1px 1px $secondaryColor2;
+  transition: 1s ease-in-out;
+
+  &__span {
+    color: $secondaryColor2;
+  }
+}
+
+
+ 
   }
 }
