--- a/src/projects/_projects.scss
+++ b/src/projects/_projects.scss
@@ -1,5 +1,10 @@
 ._projects {
-  background-image: linear-gradient(to top, #5c1b81 0%, #2b0a31 75%, #000000 100%);
+  background-image: linear-gradient(
+    to top,
+    #5c1b81 0%,
+    #2b0a31 75%,
+    #000000 100%
+  );
   height: 100vh;
   font-size: 5vw;
   margin-top: 0;
@@ -10,8 +15,6 @@
     display: flex;
     justify-content: center;
     align-items: center;
-
-
 
     &__down {
       color: $mainColor2;
@@ -33,4 +36,3 @@
     }
   }
 }
-
