Button isActive and props all set, need to define all light mode from now

--- a/src/home/_home.scss
+++ b/src/home/_home.scss
@@ -4,7 +4,17 @@
   margin: 0;
   box-sizing: border-box;
 }
+._light__home{
 
+  height: 120vh;
+  color: $secondaryColor2;
+  font-size: $fontMainSize;
+  font-family: $fontMainTitle;
+  background-image: url("../../public/assets/backgroundLight.jpg");
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center center;
+}
 ._home {
   height: 120vh;
   color: $secondaryColor2;
