Modifying dark mode

--- a/src/App.scss
+++ b/src/App.scss
@@ -13,4 +13,4 @@
 @import "./projects/projects";
 @import "./carousel/carousel";
 @import "./timeline/timeline";
-@import "./darkmode/darkmode"
+@import "./darkmode/darkmode";
