--- a/src/timeline/_timeline.scss
+++ b/src/timeline/_timeline.scss
@@ -99,34 +99,34 @@
       left: -5px;
     }
     section#timeline article:nth-child(1) div.inner h2 {
-      background: #e74c3c;
+      background-color: green;
     }
     section#timeline article:nth-child(1) div.inner h2:after {
-      background: #e74c3c;
+      background-color: green;
     }
     section#timeline article:nth-child(2) div.inner h2 {
-      background: #2ecc71;
+      background-color: green;
     }
     section#timeline article:nth-child(2) div.inner h2:after {
-      background: #2ecc71;
+      background-color: green;
     }
     section#timeline article:nth-child(3) div.inner h2 {
-      background: #e67e22;
+      background-color: green;
     }
     section#timeline article:nth-child(3) div.inner h2:after {
-      background: #e67e22;
+background-color: green;
     }
     section#timeline article:nth-child(4) div.inner h2 {
-      background: #1abc9c;
+    
     }
     section#timeline article:nth-child(4) div.inner h2:after {
-      background: #1abc9c;
+  
     }
     section#timeline article:nth-child(5) div.inner h2 {
-      background: #9b59b6;
+ 
     }
     section#timeline article:nth-child(5) div.inner h2:after {
-      background: #9b59b6;
+
     }
   }
 }
