modifying darkmode and new section about me

--- a/src/App.scss
+++ b/src/App.scss
@@ -3,6 +3,7 @@
 @import "sass/_typography.scss";
 @import "sass/_index.scss";
 @import "./home/_home";
+@import "./about/_about";
 @import "./navbar/_navBar";
 @import "./skills/_skills";
 @import "./languageCardList/_languageCard";
