--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -1,6 +1,6 @@
 //Main colors
-$mainColor: rgb(103, 84, 244);
-$secondaryColor: rgb(227, 187, 101);
+$mainColor: #37151e;
+$secondaryColor: #02ffa3;
 
 //Secondary colors
 $mainColor2: #7f3fb6;
@@ -11,12 +11,12 @@ $mainColor3: rgb(255, 255, 255);
 $secondaryColor3: rgb(0, 0, 0);
 
 //Forth colors set
-$mainColor4: rgb(255, 238, 0);
+$mainColor4: rgb(0, 65, 118);
 $secondaryColor4: rgb(0, 0, 0);
 
 //Font-Family
-$fontMainTitle: "Montserrat";
-$fontText: "Abel";
+$fontMainTitle: "Dosis";
+$fontText: "Dosis";
 
 //Font-Size
 $fontMainSize: 2vw;
