--- a/src/home/_home.scss
+++ b/src/home/_home.scss
@@ -8,8 +8,8 @@
   height: 120vh;
   color: $secondaryColor2;
   font-size: $fontMainSize;
-  font-family: $fontMainTitle;
-  background-image: url("../../public/assets/backgroundLighte.jpg");
+  font-family: $fontText;
+  background-image: url("../../public/assets/night.png");
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center center;
@@ -19,7 +19,7 @@
   color: $secondaryColor2;
   font-size: $fontMainSize;
   font-family: $fontMainTitle;
-  background-image: url("../../public/assets/backgroundLight.jpg");
+  background-image: url("../../public/assets/day.png");
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center center;
@@ -28,6 +28,7 @@
     margin-left: 4vw;
     display: flex;
     flex-direction: row;
+    font-family: $fontText;
 
     &__span {
       font-weight: 100;
@@ -36,7 +37,7 @@
       margin-left: 0.3vw;
       margin-top: 13vh;
       font-size: 7vw;
-      font-family: $fontMainTitle;
+      font-family: $fontText;
       z-index: 20;
     }
 
@@ -46,7 +47,7 @@
       margin-left: 0.3vw;
       margin-top: 13vh;
       font-size: 7vw;
-      font-family: $fontMainTitle;
+      font-family: $fontText;
       animation-name: reverse-rubberBand;
       animation-duration: 1s;
       transition: 1s ease-in-out;
@@ -61,20 +62,20 @@
 
     &__container {
       display: flex;
-      justify-content: flex-end;
+      justify-content: flex-start;
       align-items: center;
 
       &__desc {
-        margin-top: 10vh;
-        color: $secondaryColor;
         width: 30vw;
+        margin-top: 22vh;
+        color: $mainColor;
         height: auto;
-        font-size: $fontTextSize;
-        font-family: $fontMainTitle;
-        margin-right: 3vw;
+        font-size: 2vw;
+        font-family: $fontText;
+        margin-left: 5vw;
         font-style: italic;
         font-weight: 100;
-        text-shadow: 1px 1px 1px rgb(110, 255, 110);
+        text-shadow: 1px 1px 1px black;
         transition: 1s ease-in-out;
 
         &:hover {
@@ -92,42 +93,6 @@
           cursor: pointer;
           z-index: 20;
         }
-
-        &__name {
-          font-family: $fontMainTitle;
-          color: $secondaryColor;
-          font-size: 3vw;
-          font-weight: 400;
-          margin-top: 12vh;
-          margin-right: 6vw;
-
-          background-image: linear-gradient(
-            225deg,
-            $mainColor 0%,
-            $secondaryColor 29%,
-            $mainColor2 67%,
-            $secondaryColor2 80%,
-            #fff800 100%
-          );
-          background-size: auto auto;
-          background-clip: border-box;
-          background-size: 200% auto;
-          color: #fff;
-          background-clip: text;
-          -webkit-background-clip: text;
-          -webkit-text-fill-color: transparent;
-          animation: textclip 5s linear infinite;
-          display: inline-block;
-
-          @keyframes textclip {
-            to {
-              background-position: 200% center;
-            }
-          }
-          &__span {
-            font-weight: 600;
-          }
-        }
       }
     }
   }
@@ -139,26 +104,48 @@
     justify-content: space-around;
 
     &__down {
-      margin-bottom: 6vh;
-      color: $mainColor3;
-      font-size: $fontMainSize;
-      font-weight: 100;
-      font-family: $fontMainTitle;
-      background: none;
-      opacity: 0.7;
+      margin-bottom: 14vh;
+      font-size: 2rem;
+      font-weight: 900;
+      font-family: $fontText;
       cursor: pointer;
-      padding: 1vh 1vw 1vh 1vw;
-      border: solid 0.1vw $mainColor3;
-      border-radius: 2vw;
+      padding: 10px;
+      border: solid 0.1vw #37151e;
+      border-radius: 20%;
       transition: 1s ease-in-out;
       backdrop-filter: blur(5.2px);
       -webkit-backdrop-filter: blur(5.2px);
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      text-transform: uppercase;
+      background-image: linear-gradient(
+        to right,
+        #57b6ff,
+        #0073a8,
+        #593700,
+        #624300
+      );
+      -webkit-background-clip: text;
+      background-clip: text;
+      color: transparent;
+      background-size: 300%;
+      background-position: -100%;
+      animation: animatedText 5s infinite alternate-reverse;
+      @keyframes animatedText {
+        to {
+          background-position: 100%;
+        }
+      }
 
       &:hover {
         transition: 1s ease-in-out;
-        background-color: $secondaryColor;
-        color: $secondaryColor3;
-        border: solid 0.2vw $secondaryColor3;
+        opacity: 1;
+        background-color: #ff4b4e;
+        color: white;
+        border: solid 0.1vw white;
+        text-shadow: 1px 1px 1px black;
+        box-shadow: 2px 2px 2px black;
       }
     }
   }
@@ -168,3 +155,36 @@
     flex-direction: column;
   }
 }
+
+// &container {
+//   font-weight: 600;
+//   background-color: aqua;
+//   overflow: hidden;
+//   height: 40px;
+//   padding: 0 40px;
+
+//   &:before {
+//     content: "[";
+//     left: 0;
+//   }
+
+//   &:after {
+//     content: "]";
+//     position: absolute;
+//     right: 0;
+//   }
+
+//   &:after,
+//   &:before {
+//     position: absolute;
+//     top: 0;
+//     color: #ff0000;
+//     font-size: 42px;
+//     line-height: 40px;
+//     -webkit-animation-name: opacity;
+//     -webkit-animation-duration: 2s;
+//     -webkit-animation-iteration-count: infinite;
+//     animation-name: opacity;
+//     animation-duration: 1s;
+//     animation-iteration-count: infinite;
+//   }
