Adding logos planes and compass

--- a/src/App.scss
+++ b/src/App.scss
@@ -15,3 +15,5 @@
 @import "./carousel/carousel";
 @import "./timeline/timeline";
 @import "./darkmode/darkmode";
+@import "./scrollDown/scrollArrow.scss";
+@import "./rotateText/rotate";
