--- a/src/about/_about.scss
+++ b/src/about/_about.scss
@@ -1,4 +1,24 @@
+
+._light__about {
+
+  margin-top: 10vh;
+  width: 100vw;
+  height: 120vh;
+  font-size: $fontMainSize;
+  font-family: $fontMainTitle;
+  background-image: url("../../public/assets/nightRoad.png");
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+
+}
+
 ._about {
+  margin-top: 10vh;
   width: 100vw;
   height: 120vh;
   font-size: $fontMainSize;
@@ -13,8 +33,7 @@
   justify-content: center;
 
   &__container {
-    margin-top: -15vh;
-    height: 80vh;
+    height: 70vh;
     width: 80vw;
     background-color: rgba(31, 22, 0, 0.5);
     border: solid 5px black;
@@ -34,11 +53,175 @@
       color: bisque;
       text-align: center;
     }
-
+&__images{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  width: 80%;
+}
     &__img {
-      width: 10vw;
+height: 18vh;
       border-radius: 100%;
       border: solid 3px black;
     }
+    &__img1 {
+      position: absolute;
+      height: 18vh;
+      animation: rotation 100s infinite linear;
+   
+    }
+    &__img2 {
+      position: relative;
+      height: 18vh;
+    }
+
+    &__img3 {
+      height: 18vh;
+      animation: rotation 140s infinite alternate-reverse;
+          }
+
+          &__img4 {
+            position: absolute;
+            height: 18vh;
+   
+         
+          }
+          &__img5 {
+            position: relative;
+            height: 18vh;
+  transform: rotate(20deg);
+	animation: spin 4.0s alternate infinite;
+	-ms-transform: rotate(20deg);
+	-o-transform: rotate(20deg);
+	-o-animation: spin 3.5.0s alternate infinite;
+	-moz-transform: rotate(20deg);
+	-moz-animation: spin 5.0s alternate infinite;
+	-webkit-transform: rotate(20deg);
+	-webkit-animation: spin 5.5.0s alternate infinite;}
+
+@keyframes rotation {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(359deg);
   }
 }
+
+@keyframes spin {
+  0%{
+      transform:scale(1) rotate(0deg);
+  }
+50% {
+  transform:scale(1) rotate(80deg);
+}
+100% {
+  transform:scale(1) rotate(-180deg);
+}
+}
+
+@-o-keyframes spin {
+  0%{
+      -webkit-transform:scale(1) rotate(0deg);
+  }
+50% {
+  -webkit-transform:scale(1) rotate(80deg);
+}
+100% {
+  -webkit-transform:scale(1) rotate(-180deg);
+}
+}
+
+@-moz-keyframes spin {
+  0%{
+      -webkit-transform:scale(1) rotate(0deg);
+  }
+50% {
+  -webkit-transform:scale(1) rotate(80deg);
+}
+100% {
+  -webkit-transform:scale(1) rotate(-180deg);
+}
+}
+
+@-webkit-keyframes spin {
+  0%{
+      -webkit-transform:scale(1) rotate(0deg);
+  }
+50% {
+  -webkit-transform:scale(1) rotate(80deg);
+}
+100% {
+  -webkit-transform:scale(1) rotate(-180deg);
+}
+}
+  }
+}
+
+
+
+/*Vertical Sliding*/
+.slidingVerticalo{
+	display: inline;
+	text-indent: 8px;
+}
+.slidingVerticalo span{
+	animation: topToBottom 12.5s linear infinite 0s;
+	-ms-animation: topToBottom 12.5s linear infinite 0s;
+	-webkit-animation: topToBottom 12.5s linear infinite 0s;
+	color: #ff4b4e;
+	opacity: 0;
+	overflow: hidden;
+	position: absolute;
+}
+.slidingVerticalo span:nth-child(2){
+	animation-delay: 2.5s;
+	-ms-animation-delay: 2.5s;
+	-webkit-animation-delay: 2.5s;
+}
+.slidingVerticalo span:nth-child(3){
+	animation-delay: 5s;
+	-ms-animation-delay: 5s;
+	-webkit-animation-delay: 5s;
+}
+.slidingVerticalo span:nth-child(4){
+	animation-delay: 7.5s;
+	-ms-animation-delay: 7.5s;
+	-webkit-animation-delay: 7.5s;
+}
+.slidingVerticalo span:nth-child(5){
+	animation-delay: 10s;
+	-ms-animation-delay: 10s;
+	-webkit-animation-delay: 10s;
+}
+
+/*topToBottom Animation*/
+@-moz-keyframes topToBottom{
+	0% { opacity: 0; }
+	5% { opacity: 0; -moz-transform: translateY(-50px); }
+	10% { opacity: 1; -moz-transform: translateY(0px); }
+	25% { opacity: 1; -moz-transform: translateY(0px); }
+	30% { opacity: 0; -moz-transform: translateY(50px); }
+	80% { opacity: 0; }
+	100% { opacity: 0; }
+}
+@-webkit-keyframes topToBottom{
+	0% { opacity: 0; }
+	5% { opacity: 0; -webkit-transform: translateY(-50px); }
+	10% { opacity: 1; -webkit-transform: translateY(0px); }
+	25% { opacity: 1; -webkit-transform: translateY(0px); }
+	30% { opacity: 0; -webkit-transform: translateY(50px); }
+	80% { opacity: 0; }
+	100% { opacity: 0; }
+}
+@-ms-keyframes topToBottom{
+	0% { opacity: 0; }
+	5% { opacity: 0; -ms-transform: translateY(-50px); }
+	10% { opacity: 1; -ms-transform: translateY(0px); }
+	25% { opacity: 1; -ms-transform: translateY(0px); }
+	30% { opacity: 0; -ms-transform: translateY(50px); }
+	80% { opacity: 0; }
+	100% { opacity: 0; }
+}
+
+
