--- a/src/App.scss
+++ b/src/App.scss
@@ -12,10 +12,7 @@
 @import "./skillsCardList/skillsCardList";
 @import "./education/education";
 @import "./projects/projects";
-@import "./carousel/carousel";
 @import "./timeline/timeline";
 @import "./darkmode/darkmode";
 @import "./scrollDown/scrollArrow.scss";
-@import "./rotateText/rotate";
-@import "./carou/carou";
-@import "react-alice-carousel/lib/scss/alice-carousel.scss";
+@import "./sass/rotate";
