--- a/src/navbar/_navBar.scss
+++ b/src/navbar/_navBar.scss
@@ -1,19 +1,16 @@
 ._navbar {
-  margin-right: 0;
-  z-index: 50;
+  transform: translateX(232%);
+  z-index: 5;
   position: fixed;
-  width: 100vw;
   display: flex;
   flex-direction: column;
   margin-top: 7.5%;
-  justify-content: space-between;
-  align-items: flex-end;
   font-family: $fontMainTitle;
   text-shadow: 1px 1px 1px wheat;
   color: $mainColor;
-  padding: 1vh 2vw 1vh 2vw;
   height: 10vh;
   font-size: $fontTextSize;
+
 
   &__img {
     width: 3vw;
@@ -31,6 +28,7 @@
 
 
   &__container {
+    width: 30vw;
     &__ul {
       text-align: left;
       padding: 2vh 0 1vh 0;
