--- a/src/skills/_skills.scss
+++ b/src/skills/_skills.scss
@@ -32,8 +32,6 @@
       justify-content: center;
       flex-wrap: wrap-reverse;
       gap: 5vw;
-
-
     }
 
     &__title {
@@ -46,4 +44,5 @@
       text-shadow: 1px 1px 1px black;
       text-align: center;
     }
-  }}
+  }
+}
