resolving path images

--- a/src/home/_home.scss
+++ b/src/home/_home.scss
@@ -9,7 +9,7 @@
   color: $secondaryColor2;
   font-size: $fontMainSize;
   font-family: $fontText;
-  background-image: url("../assets/images/day.png");
+  background-image: url("./assets/night.png");
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center center;
@@ -19,7 +19,7 @@
   color: $secondaryColor2;
   font-size: $fontMainSize;
   font-family: $fontMainTitle;
-  background-image: url("../assets/images/day.png");
+  background-image: url("./assets/day.png");
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center center;
