resolving path images again

--- a/src/about/_about.scss
+++ b/src/about/_about.scss
@@ -4,7 +4,7 @@
   height: 120vh;
   font-size: $fontMainSize;
   font-family: $fontMainTitle;
-  background-image: url("./assets/nightRoad.png");
+  background-image: url("/assets/nightRoad.png");
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center center;
@@ -20,7 +20,7 @@
   height: 120vh;
   font-size: $fontMainSize;
   font-family: $fontMainTitle;
-  background-image: url("./assets/dayRoad.png");
+  background-image: url("/assets/dayRoad.png");
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center center;
