--- a/src/skills/_skills.scss
+++ b/src/skills/_skills.scss
@@ -4,7 +4,7 @@
   color: $mainColor;
   font-size: $fontMainSize;
   font-family: $fontMainTitle;
-  background-image: url("./assets/dayDesert.png");
+  background-image: url("/assets/dayDesert.png");
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center center;
