--- a/src/App.scss
+++ b/src/App.scss
@@ -10,6 +10,6 @@
 @import "./education/education";
 @import "./projects/projects";
 @import "./timeline/timeline";
-@import "./darkmode/darkmode";
 @import "./scrollDown/scrollArrow.scss";
 @import "./sass/rotate";
+@import "./softSkillsCard/softSkillsCard.scss";
