--- a/src/about/_about.scss
+++ b/src/about/_about.scss
@@ -1,5 +1,5 @@
 ._light__about {
-  margin-top: 10vh;
+  margin-top: 9vh;
   width: 100vw;
   height: 120vh;
   font-size: $fontMainSize;
@@ -15,7 +15,7 @@
 }
 
 ._about {
-  margin-top: 10vh;
+  margin-top: 9vh;
   width: 100vw;
   height: 120vh;
   font-size: $fontMainSize;
@@ -32,7 +32,7 @@
   &__container {
     height: 70vh;
     width: 80vw;
-    background-color: rgba(31, 22, 0, 0.5);
+    background-color: rgba(0, 21, 31, 0.5);
     border: solid 5px black;
     border-radius: 50px;
     backdrop-filter: blur(5.2px);
@@ -42,32 +42,61 @@
     justify-content: space-around;
     align-items: center;
 
+    &__light {
+      height: 70vh;
+      width: 80vw;
+      background-color: rgba(31, 22, 0, 0.5);
+      border: solid 5px black;
+      border-radius: 50px;
+      backdrop-filter: blur(5.2px);
+      -webkit-backdrop-filter: blur(5.2px);
+      display: flex;
+      flex-direction: column;
+      justify-content: space-around;
+      align-items: center;
+      box-shadow: 0 0 0.2rem #fff, 0 0 0.2rem #fff, 0 0 2rem #4a13fe,
+        0 0 0.8rem #4a13fe, 0 0 2.8rem #4a13fe, inset 0 0 1.3rem #4a13fe;
+    }
+
     &__title {
       color: #ff4b4e;
       text-shadow: 1px 1px 1px black;
     }
+
     &__desc {
       width: 90%;
       color: bisque;
       text-shadow: 1px 1px 1px black;
       text-align: center;
     }
+
     &__images {
       display: flex;
       flex-direction: row;
       justify-content: space-around;
       width: 80%;
     }
+
     &__img {
       height: 18vh;
       border-radius: 100%;
       border: solid 3px black;
+
+      &__light {
+        height: 18vh;
+        border-radius: 100%;
+        border: solid 3px black;
+        box-shadow: 0 0 0.2rem #fff, 0 0 0.2rem #fff, 0 0 2rem #4a13fe,
+          0 0 0.8rem #4a13fe, 0 0 2.8rem #4a13fe, inset 0 0 1.3rem #4a13fe;
+      }
     }
+
     &__img1 {
       position: absolute;
       height: 18vh;
       animation: rotation 100s infinite linear;
     }
+
     &__img2 {
       position: relative;
       height: 18vh;
@@ -81,6 +110,7 @@
       position: absolute;
       height: 18vh;
     }
+
     &__img5 {
       position: relative;
       height: 18vh;
@@ -99,6 +129,7 @@
       from {
         transform: rotate(0deg);
       }
+
       to {
         transform: rotate(359deg);
       }
@@ -108,9 +139,11 @@
       0% {
         transform: scale(1) rotate(0deg);
       }
+
       50% {
         transform: scale(1) rotate(80deg);
       }
+
       100% {
         transform: scale(1) rotate(-180deg);
       }
@@ -120,9 +153,11 @@
       0% {
         -webkit-transform: scale(1) rotate(0deg);
       }
+
       50% {
         -webkit-transform: scale(1) rotate(80deg);
       }
+
       100% {
         -webkit-transform: scale(1) rotate(-180deg);
       }
@@ -132,9 +167,11 @@
       0% {
         -webkit-transform: scale(1) rotate(0deg);
       }
+
       50% {
         -webkit-transform: scale(1) rotate(80deg);
       }
+
       100% {
         -webkit-transform: scale(1) rotate(-180deg);
       }
@@ -144,9 +181,11 @@
       0% {
         -webkit-transform: scale(1) rotate(0deg);
       }
+
       50% {
         -webkit-transform: scale(1) rotate(80deg);
       }
+
       100% {
         -webkit-transform: scale(1) rotate(-180deg);
       }
@@ -159,6 +198,7 @@
   display: inline;
   text-indent: 8px;
 }
+
 .slidingVerticalo span {
   animation: topToBottom 12.5s linear infinite 0s;
   -ms-animation: topToBottom 12.5s linear infinite 0s;
@@ -169,21 +209,25 @@
   overflow: hidden;
   position: absolute;
 }
+
 .slidingVerticalo span:nth-child(2) {
   animation-delay: 2.5s;
   -ms-animation-delay: 2.5s;
   -webkit-animation-delay: 2.5s;
 }
+
 .slidingVerticalo span:nth-child(3) {
   animation-delay: 5s;
   -ms-animation-delay: 5s;
   -webkit-animation-delay: 5s;
 }
+
 .slidingVerticalo span:nth-child(4) {
   animation-delay: 7.5s;
   -ms-animation-delay: 7.5s;
   -webkit-animation-delay: 7.5s;
 }
+
 .slidingVerticalo span:nth-child(5) {
   animation-delay: 10s;
   -ms-animation-delay: 10s;
@@ -195,79 +239,99 @@
   0% {
     opacity: 0;
   }
+
   5% {
     opacity: 0;
     -moz-transform: translateY(-50px);
   }
+
   10% {
     opacity: 1;
     -moz-transform: translateY(0px);
   }
+
   25% {
     opacity: 1;
     -moz-transform: translateY(0px);
   }
+
   30% {
     opacity: 0;
     -moz-transform: translateY(50px);
   }
+
   80% {
     opacity: 0;
   }
+
   100% {
     opacity: 0;
   }
 }
+
 @-webkit-keyframes topToBottom {
   0% {
     opacity: 0;
   }
+
   5% {
     opacity: 0;
     -webkit-transform: translateY(-50px);
   }
+
   10% {
     opacity: 1;
     -webkit-transform: translateY(0px);
   }
+
   25% {
     opacity: 1;
     -webkit-transform: translateY(0px);
   }
+
   30% {
     opacity: 0;
     -webkit-transform: translateY(50px);
   }
+
   80% {
     opacity: 0;
   }
+
   100% {
     opacity: 0;
   }
 }
+
 @-ms-keyframes topToBottom {
   0% {
     opacity: 0;
   }
+
   5% {
     opacity: 0;
     -ms-transform: translateY(-50px);
   }
+
   10% {
     opacity: 1;
     -ms-transform: translateY(0px);
   }
+
   25% {
     opacity: 1;
     -ms-transform: translateY(0px);
   }
+
   30% {
     opacity: 0;
     -ms-transform: translateY(50px);
   }
+
   80% {
     opacity: 0;
   }
+
   100% {
     opacity: 0;
   }
