--- a/src/skills/_skills.scss
+++ b/src/skills/_skills.scss
@@ -13,36 +13,136 @@
   align-items: center;
   justify-content: center;
 
-  &__container {
-    height: 80vh;
-    width: 80vw;
-    background-color: rgba(31, 22, 0, 0.5);
-    border: solid 5px black;
-    border-radius: 50px;
-    backdrop-filter: blur(5.2px);
-    -webkit-backdrop-filter: blur(5.2px);
+  &__light {
+    width: 100vw;
+    height: 120vh;
+    color: $mainColor;
+    font-size: $fontMainSize;
+    font-family: $fontMainTitle;
+    background-image: url("/assets/nightDesert.png");
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center center;
     display: flex;
     flex-direction: column;
+    align-items: center;
+    justify-content: center;
+  }
+
+  &__container {
+    display: flex;
+    flex-direction: row-reverse;
+    width: 90%;
     justify-content: space-around;
     align-items: center;
-
-    &__languages {
-      display: flex;
-      flex-direction: row;
-      justify-content: center;
-      flex-wrap: wrap-reverse;
-      gap: 5vw;
-    }
+    flex-wrap: wrap;
+    z-index: 0;
 
     &__title {
       color: #ff4b4e;
       text-shadow: 1px 1px 1px black;
+      position: absolute;
+      top: 0.4rem;
     }
-    &__desc {
-      width: 90%;
-      color: bisque;
-      text-shadow: 1px 1px 1px black;
-      text-align: center;
+
+    &__webTech {
+      height: 80vh;
+      width: 40vw;
+      background-color: rgba(31, 22, 0, 0.5);
+      border: solid 5px black;
+      border-radius: 50px;
+      backdrop-filter: blur(5.2px);
+      -webkit-backdrop-filter: blur(5.2px);
+      display: flex;
+      flex-direction: column;
+      justify-content: space-around;
+      align-items: center;
+
+      &__light {
+        height: 80vh;
+        width: 40vw;
+        background-color: rgba(31, 22, 0, 0.5);
+        border: solid 5px black;
+        border-radius: 50px;
+        backdrop-filter: blur(5.2px);
+        -webkit-backdrop-filter: blur(5.2px);
+        display: flex;
+        flex-direction: column;
+        justify-content: space-around;
+        align-items: center;
+        box-shadow: 0 0 0.2rem #fff, 0 0 0.2rem #fff, 0 0 2rem #4a13fe,
+          0 0 0.8rem #4a13fe, 0 0 2.8rem #4a13fe, inset 0 0 1.3rem #4a13fe;
+      }
+
+      &__languages {
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        flex-wrap: wrap-reverse;
+        gap: 2vw;
+        margin-top: 5rem;
+      }
+
+      &__desc {
+        width: 90%;
+        color: bisque;
+        text-shadow: 1px 1px 1px black;
+        text-align: center;
+      }
+    }
+
+    &__skills {
+      height: 80vh;
+      width: 40vw;
+      background-color: rgba(31, 22, 0, 0.5);
+      border: solid 5px black;
+      border-radius: 50px;
+      backdrop-filter: blur(5.2px);
+      -webkit-backdrop-filter: blur(5.2px);
+      display: flex;
+      flex-direction: column;
+      justify-content: space-around;
+      align-items: center;
+
+      &__light {
+        height: 80vh;
+        width: 40vw;
+        background-color: rgba(31, 22, 0, 0.5);
+        border: solid 5px black;
+        border-radius: 50px;
+        backdrop-filter: blur(5.2px);
+        -webkit-backdrop-filter: blur(5.2px);
+        display: flex;
+        flex-direction: column;
+        justify-content: space-around;
+        align-items: center;
+        box-shadow: 0 0 0.2rem #fff, 0 0 0.2rem #fff, 0 0 2rem #4a13fe,
+          0 0 0.8rem #4a13fe, 0 0 2.8rem #4a13fe, inset 0 0 1.3rem #4a13fe;
+      }
+
+      &__languages {
+        width: 80%;
+        height: 80%;
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        flex-wrap: wrap;
+        gap: 2.5rem;
+        margin-top: 3rem;
+
+        &__desc {
+          width: 90%;
+          color: bisque;
+          text-shadow: 1px 1px 1px black;
+          text-align: center;
+          z-index: 30;
+        }
+      }
+
+      &__title {
+        color: #ff4b4e;
+        text-shadow: 1px 1px 1px black;
+      }
     }
   }
 }
