--- a/src/softSkillsCard/_softSkillsCard.scss
+++ b/src/softSkillsCard/_softSkillsCard.scss
@@ -1,4 +1,4 @@
-._languageCard {
+._softSkillsCard {
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
@@ -17,6 +17,8 @@
       font-size: 1.2rem;
       margin-bottom: 2vh;
       font-weight: 400;
+      width: 100%;
+      text-align: center;
     }
 
     &__img {
