--- a/src/App.scss
+++ b/src/App.scss
@@ -13,3 +13,4 @@
 @import "./scrollDown/scrollArrow.scss";
 @import "./sass/rotate";
 @import "./softSkillsCard/softSkillsCard.scss";
+@import "./loader/Loader.scss";
