--- a/src/navbar/_navBar.scss
+++ b/src/navbar/_navBar.scss
@@ -121,3 +121,17 @@
     }
   }
 }
+
+.rotation {
+  animation: rotation 2s infinite linear;
+
+  @keyframes rotation {
+    from {
+      transform: rotate(0deg);
+    }
+
+    to {
+      transform: rotate(359deg);
+    }
+  }
+}
