--- a/src/home/_home.scss
+++ b/src/home/_home.scss
@@ -54,10 +54,12 @@
   color: $secondaryColor2;
   font-size: $fontMainSize;
   font-family: $fontMainTitle;
-  background-image: url("/assets/day.png");
+  background-image: url("/assets/day.jpg");
+
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center center;
+  z-index: 40;
 
   &__container {
     display: flex;
